# EtcAbductionPy

./: .gitignore  README.md  pyproject.toml
docs/: chicken-egg.lisp  classifier.lisp  coinflips.lisp  dead-plant.lisp  example1.html  example10.html  example2.html  example3.html  example4.html  example5.html  example6.html  example7.html  example8.html  example9.html  flashoflight.lisp  flashoflight2.lisp  getting-started.html  index.html  infection1.lisp  infection2.lisp  infection2x2.lisp  infection2x2b.lisp  lemon-lime.lisp  man-bites-dog-v1.lisp  man-bites-dog-v2.lisp  nail-collapse.lisp  story1.lisp  story2.lisp  story3.lisp  story4.lisp  story5.lisp  story6.lisp  story7.lisp  story8.lisp  sunny-snowstorm.lisp  twenty-ticks.lisp
docs/css/: tutorial.css
etcabductionpy/: __init__.py  __main__.py  _abduction.py  _incremental.py  _parse.py  abduction.py  etcetera.py  evaluate.py  forward.py  incremental.py  namespace.py  parse.py  sexp.py  unify.py
src/etcabductionpy/: __init__.py  __main__.py  _abduction.py  _etcetera.py  _forward.py  _incremental.py  _knowledgebase.py  _parse.py  _sexp.py  _unify.py
tests/: test_abduction.py  test_etcetera.py  test_forward.py  test_incremental.py  test_knowledgebase.py  test_sexp.py  test_unify.py
tricopa/: TriCOPA.txt  context.py  learning.py  readme.md  readme.txt  tricopa-kb.lisp  tricopa.py
util/: dot2safari  parsecheck.py  templates.py
