[build-system]
requires = ["setuptools >= 45"]
build-backend = "setuptools.build_meta"

[project]
name = "etcabductionpy"
version = "0.3.0"
description = "An implementation of Etcetera Abduction in Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Andrew S. Gordon", email = "gordon@ict.usc.edu"}]
license = {text = "BSD-2-Clause"}

[tool.setuptools.packages.find]
where = ["src"]